// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCardErrorScreen renders CardExpired variant correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "padding": 16,
        },
        undefined,
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            {
              "marginBottom": 8,
            },
          ]
        }
      >
        BCSC.VerificationCardError.CardExpired.Heading
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        BCSC.VerificationCardError.CardExpired.Description
      </Text>
      <View
        accessibilityLabel="BCSC.VerificationCardError.CardExpired.ButtonText"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#003366",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ],
              ]
            }
          >
            BCSC.VerificationCardError.CardExpired.ButtonText
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`VerificationCardErrorScreen renders MismatchedSerial variant correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "padding": 16,
        },
        undefined,
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            {
              "marginBottom": 8,
            },
          ]
        }
      >
        BCSC.MismatchedSerial.Heading
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        BCSC.MismatchedSerial.Description1
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.MismatchedSerial.SerialNumber
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "bold",
            },
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        BCSC.MismatchedSerial.Birthdate
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            {
              "marginBottom": 24,
            },
          ]
        }
      >
        BCSC.MismatchedSerial.Description2
      </Text>
      <Image
        resizeMode="contain"
        source={
          {
            "uri": "mocked-image-uri",
          }
        }
        style={
          {
            "height": 481.06,
            "marginBottom": 24,
            "width": 718,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
